[gd_scene load_steps=2 format=3 uid="uid://5arm34pep1aj"]

[ext_resource type="Script" uid="uid://dy7yspjdjilx6" path="res://ui/province_selected.gd" id="1_fdlfc"]

[node name="ProvinceSelected" type="CanvasLayer"]
script = ExtResource("1_fdlfc")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -38.0
offset_right = 300.0
offset_bottom = 39.0
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Province Id: "

[node name="LabelProvinceID" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Province Color"

[node name="ColorPickerProvinceColor" type="ColorPickerButton" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Province Type"

[node name="LabelProvinceType" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Owner"

[node name="LabelOwner" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Controller"

[node name="LabelController" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "State"

[node name="LabelState" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="Label8" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Position"

[node name="LabelPosition" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2

[node name="ButtonSetPosition" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Set Position"

[node name="ButtonSave" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Save"

[connection signal="button_up" from="PanelContainer/GridContainer/ButtonSetPosition" to="." method="_on_button_set_position_button_up"]
[connection signal="button_up" from="PanelContainer/GridContainer/ButtonSave" to="." method="_on_button_save_button_up"]
